# HWbeta1

./: .gitignore  pyproject.toml
data/: mylog.txt  operations.json  test_csv.csv  test_excel.xlsx
src/: decorators.py  generators.py  logger.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
